chore: supported PostCss >= 8.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "postcss-px-to-viewport",
+  "name": "@voodeng/postcss-px-to-viewport",
   "description": "A CSS post-processor that converts px to viewport units (vw, vh, vmin, vmax).",
-  "version": "1.1.1",
+  "version": "1.2.2",
   "author": "Dmitry Karpunin <koderfunk@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -31,10 +31,9 @@
     "object-assign": ">=4.0.1"
   },
   "devDependencies": {
-    "jest": "^25.4.0",
-    "postcss": ">=5.0.2"
+    "jest": "^25.4.0"
   },
   "peerDependencies": {
-    "postcss": ">=5.0.2"
+    "postcss": "^8.0.0"
   }
 }
